src/scss/pages/front-page.scss
#hero-section{
  position: relative;
  width: 100vw;
  font-family: 'Montserrat-v',sans-serif;
  height: 100vh;
  top: 0;
  left: 0;
  padding: 0!important;

  .swiper{
    width: 100vw;
    padding: 0;

    .swiper-slide{
      padding-top: 45vh;
      height: 55vh;
      
      h2{
        color:$light;
        font-weight: 200;
        font-size: 5rem;
        line-height: 5rem;
        text-transform: uppercase;

          strong{
            font-weight: 700;
          }
      }

      p{
        color:$secondary-color;
        font-size: 1.5em;
        margin-top: 30px;
        text-transform: uppercase;
        font-weight: 400;
        letter-spacing: 1px;
        width: 33vw;
      }
    }
  }
  
    .swiper-pagination{
      position: absolute;
      top:-10vh;
      right: 0!important;
      gap: 10px;
      width: 90vw;
      margin:auto;
      height: 50px !important;
      display: flex !important;
      align-items: flex-end;
      align-content: flex-end;
      justify-content: center;
      flex-direction: column;
    }
    
    .swiper-pagination-bullet {
      padding: 0px 5px;
      border-radius: 0;
      width: 20px;
      height: 2px;
      text-align: center;
      font-size: 12px;
      color: $light;
      opacity: 1;
      background: $light;
    }
    .swiper-pagination-bullet-active {
      color:$light;
      background: $secondary-color;
      width: 60px;
    }

  .menu-front-page{
    margin-top: -45px;
    position: relative;
    z-index: 2;

    .container{
      margin: auto;
      justify-content: space-between;
      gap: 15px;

      .cta-hover{
        width: 100%;
        background-color: $blueBgcolor;
        overflow: hidden;
        display: block;
        text-transform: capitalize;
        letter-spacing: 0;
        transition: all ease-in 300ms;
        font-weight: 600;

        &::before{
          content:'';
          color: $light;
          background: linear-gradient(90deg, $secondary-color 3%, $light 3%);
          transform: scaleX(0);
          height: 100%;
          width: 100%;
          left: 0;
          top: 0;
          transform-origin: left;
          margin: 0;
          z-index: -1;
          position: absolute;
          transition: all ease-in 200ms;
        }

        &::after{
          content: '→';
          position: absolute;
          left: -50px;
          top: 10px;
          transition: all ease-in 300ms;
        }

        &:hover{
            background-color: $light-gray;
            color: $primary-color;
            
            &::before{
              transform: scaleX(1);
            }

            &::after{
             left: 20px;
            }
        }
      }
    }
  }
}

#liste-actualites {
  padding-bottom: 550px;
  .cta-actus {
    margin: 100px auto;
  }
}

#mot_president {
  background-color: $light;
  width: 100vw;
  animation: slide-to-top 500ms;
  padding-bottom: 150px;

  .container {
    .col-g {
      h3 {
        color: $secondary-color;
        margin: 250px auto 50px auto;

        strong {
          font-weight: 700;
        }
      }
      p {
        em {
          color: $primary-color;
          text-align: right;
          font-style: italic;
        }
      }

      p:has(em) {
        text-align: right;
      }
    }
  }
}

#intro-actualites {
  padding-top: 100px;
  .container {
    p,
    h2 {
      text-align: center;
    }

    h2 {
      margin-bottom: 30px;
    }

    .subtitle {
      color: $dark-dark-gray;
    }
  }
}

#contact {
  background-color: $light-gray;
}

